--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "prismjs": "1.15.0",
     "rxjs": "6.2.2",
     "rxjs-compat": "6.2.2",
-    "tslib": "^1.9.0",
+    "tslib": "1.11.1",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.26"
   },
